chore: setup wrpc tooling
This also refactors grpc into a dedicated package to avoid confusion of
proto files between grpc and wrpc.

--- a/internal/grpc/proto/buf.gen.yaml
+++ b/internal/grpc/proto/buf.gen.yaml
@@ -1,15 +1,15 @@
 version: v1
 plugins:
   - name: go
-    out: internal/gen
+    out: internal/gen/grpc
     opt:
     - paths=source_relative
   - name: go-grpc
-    out: internal/gen
+    out: internal/gen/grpc
     opt:
     - paths=source_relative
   - name: grpc-gateway
-    out: internal/gen
+    out: internal/gen/grpc
     opt:
       - paths=source_relative
   - name: openapiv2
