--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -3,6 +3,8 @@ on: [push, pull_request]
 jobs:
   test:
     runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: github.com/kong/go-wrpc
     steps:
     - name: Setup go
       uses: actions/setup-go@v2
@@ -10,6 +12,9 @@ jobs:
         go-version: '^1.17'
     - name: Checkout repository
       uses: actions/checkout@v2
+    - name: Setup private modules
+      run: |
+          git config --global url."https://${{ secrets.GO_WRPC_MODULE_TOKEN }}:x-oauth-basic@github.com/kong/go-wrpc".insteadOf "https://github.com/kong/go-wrpc"
     - name: Cache Go modules
       uses: actions/cache@v1
       with:
