feat: add a basic CRUD API for Service object
Basic create, read, delete and list methods implemented.

Things to do in future:
- Enforce name uniqueness
- Reject POST with same IDs
- proper pagination

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -62,3 +62,7 @@ issues:
     - revive
     text: "blank-imports"
     path: sqlite.go
+  - linters:
+    - staticcheck
+    text: "SA1019" # using old proto package because of dependency
+    path: "internal/server/admin/helpers.go"
