--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,7 +1,7 @@
 name: Test
 on: [push, pull_request]
 jobs:
-  test:
+  lint:
     runs-on: ubuntu-latest
     env:
       GOPRIVATE: github.com/kong/go-wrpc
@@ -16,16 +16,38 @@ jobs:
       run: |
           git config --global url."https://${{ secrets.GO_WRPC_MODULE_TOKEN }}:x-oauth-basic@github.com/kong/go-wrpc".insteadOf "https://github.com/kong/go-wrpc"
     - name: Cache Go modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
-        path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+        path: |
+          ~/go/pkg/mod
+          ~/.cache/golangci-lint
+          ~/.cache/go-build
+        key: ${{ runner.os }}-go-lint-${{ hashFiles('**/go.sum') }}
     - name: make install-tools
       run: make install-tools
     - name: make verify
       run: make gen-verify
+    - name: make lint
+      run: make lint
+  unit-test:
+    runs-on: ubuntu-latest
+    env:
+      GOPRIVATE: github.com/kong/go-wrpc
+    steps:
+    - name: Setup go
+      uses: actions/setup-go@v2
+      with:
+        go-version: '^1.17'
+    - name: Checkout repository
+      uses: actions/checkout@v2
+    - name: Setup private modules
+      run: |
+          git config --global url."https://${{ secrets.GO_WRPC_MODULE_TOKEN }}:x-oauth-basic@github.com/kong/go-wrpc".insteadOf "https://github.com/kong/go-wrpc"
+    - name: Cache Go modules
+      uses: actions/cache@v2
+      with:
+        path: ~/go/pkg/mod
+        key: ${{ runner.os }}-go-unit-${{ hashFiles('**/go.sum') }}
     - name: make test
       run: make test
   integration:
@@ -53,12 +75,10 @@ jobs:
       run: |
           git config --global url."https://${{ secrets.GO_WRPC_MODULE_TOKEN }}:x-oauth-basic@github.com/kong/go-wrpc".insteadOf "https://github.com/kong/go-wrpc"
     - name: Cache Go modules
-      uses: actions/cache@v1
+      uses: actions/cache@v2
       with:
         path: ~/go/pkg/mod
-        key: ${{ runner.os }}-go-${{ hashFiles('**/go.sum') }}
-        restore-keys: |
-          ${{ runner.os }}-go-
+        key: ${{ runner.os }}-go-integration-${{ hashFiles('**/go.sum') }}
     - name: make test-integration
       run: make test-integration
 
