feat: implement commands for database migrations

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -72,7 +72,7 @@ issues:
   - linters:
       - forbidigo
     text: "fmt.Printf"
-    path: internal/cmd/version.go|internal/test/kong/manual/main.go
+    path: "internal/cmd/|internal/test/kong/manual/main.go"
   - linters:
       - errcheck
     text: "Error return value of"
