--- a/koko.yaml
+++ b/koko.yaml
@@ -1,2 +1,16 @@
 log:
   level: debug
+database:
+  dialect: sqlite3
+  sqlite:
+    #in_memory: true
+    filename: test.db
+  postgres:
+    hostname: localhost
+    port: 5432
+    db_name: koko
+    user: koko
+    password: koko
+control_server:
+  tls_cert_path: cluster.crt
+  tls_key_path: cluster.key
