--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -4,6 +4,7 @@ jobs:
   unit-test:
     runs-on: ubuntu-latest
     strategy:
+      fail-fast: false
       matrix:
         database:
         - sqlite3
