--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -6,13 +6,16 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
+        experimental: [false]
         kong_image:
         - 'kong:2.3.3'
         - 'kong:2.4.1'
         - 'kong:2.5.1'
         - 'kong:2.6.0'
         - 'kong:2.7.0'
-        - 'kong/kong:latest' # tracks mainline branch of kong/kong
+        include:
+          - kong_image: 'kong/kong:latest' # tracks mainline branch of kong/kong
+            experimental: true
     env:
       KOKO_TEST_KONG_DP_IMAGE: ${{ matrix.kong_image }}
     steps:
@@ -28,5 +31,6 @@ jobs:
         path: ~/go/pkg/mod
         key: ${{ runner.os }}-go-integration-${{ hashFiles('**/go.sum') }}
     - name: make test-integration
+      continue-on-error: ${{ matrix.experimental }}
       run: make test-integration
 
