--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -25,5 +25,6 @@ jobs:
         key: ${{ runner.os }}-go-unit-${{ hashFiles('**/go.sum') }}
     - name: setup-db
       run: ./scripts/setup-db.sh &
-    - name: make test
-      run: make test
+    - name: make test-race
+      run: make test-race
+
