--- a/internal/grpc/proto/buf.gen.yaml
+++ b/internal/grpc/proto/buf.gen.yaml
@@ -20,4 +20,5 @@ plugins:
       - allow_repeated_fields_in_body=true
       - openapi_naming_strategy=fqn
       - merge_file_name=swagger/koko
+      - json_names_for_fields=false
     strategy: all
