tests: add integration test for kong:2.8.0

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -13,6 +13,7 @@ jobs:
         - 'kong:2.5.1'
         - 'kong:2.6.0'
         - 'kong:2.7.0'
+        - 'kong:2.8.0'
         include:
           - kong_image: 'kong/kong:latest' # tracks mainline branch of kong/kong
             experimental: true
