chore: exclude wrpc generated code from linter

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -99,3 +99,6 @@ issues:
       - forcetypeassert
     text: "type assertion must be checked"
     path: _test\.go
+  - linters:
+      - gofumpt
+    path: internal/gen/wrpc
