checkout main for buf breaking

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -10,6 +10,10 @@ jobs:
         go-version: '^1.18'
     - name: Checkout repository
       uses: actions/checkout@v3
+      with:
+        ref: main
+    - name: Checkout repository
+      uses: actions/checkout@v3
     - name: Cache Go modules
       uses: actions/cache@v3
       with:
