--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,6 +25,5 @@ jobs:
       run: make gen-verify
     - name: make lint
       run: |
-        ls -la
-        git fetch --no-tags --depth=1 origin main
+        git fetch --no-tags origin main
         make lint
