--- a/.github/workflows/label-check.yaml
+++ b/.github/workflows/label-check.yaml
@@ -1,6 +1,6 @@
 name: "PR label check"
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, labeled, unlabeled, synchronize]
 jobs:
   check-labels:
