chore: separate out buf-breaking from lint
`make lint` and `make test` are considered
core and most often used parts of a developer's workflow.
Fetching from remote and running breaking change detection in those
workflow is too slow for a good development experience.
Also, considering that the likelihood a breaking change detected due to
a change in code is likely small and less relevant in a local workflow
as compared to CI.

--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -25,3 +25,5 @@ jobs:
       run: make gen-verify
     - name: make lint
       run: make lint
+    - name: make buf-breaking
+      run: make buf-breaking
