--- a/.golangci.yml
+++ b/.golangci.yml
@@ -41,6 +41,7 @@ linters:
   - nilnil
   - noctx
   - nolintlint
+  - prealloc
   - predeclared
   - promlinter
   - revive
@@ -102,6 +103,9 @@ issues:
   - linters:
       - gofumpt
     path: internal/gen/wrpc
+  - linters:
+      - prealloc
+    path: _test\.go
 linters-settings:
   depguard:
     include-go-root: true
