--- a/koko.yaml
+++ b/koko.yaml
@@ -16,4 +16,5 @@ database:
 control_server:
   tls_cert_path: cluster.crt
   tls_key_path: cluster.key
+  enable_wrpc: true
 disable_anonymous_reports: false
