--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -7,7 +7,7 @@ jobs:
     - name: Setup go
       uses: actions/setup-go@v3
       with:
-        go-version: '1.19'
+        go-version: '^1.19'
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: Cache Go modules
