--- a/.github/workflows/dev-builds.yaml
+++ b/.github/workflows/dev-builds.yaml
@@ -24,6 +24,7 @@ jobs:
         with:
           context: .
           file: Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: kong/koko:dev-latest,kong/koko:dev-${{ steps.tag.outputs.tag }}
 
