--- a/.github/workflows/dev-builds.yaml
+++ b/.github/workflows/dev-builds.yaml
@@ -10,6 +10,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
         name: Checkout Source Code
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v2
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v2
       - name: Log in to Docker Hub
         uses: docker/login-action@v2
         with:
@@ -24,6 +28,7 @@ jobs:
         with:
           context: .
           file: Dockerfile
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: kong/koko:dev-latest,kong/koko:dev-${{ steps.tag.outputs.tag }}
 
