chore: update Koko docker-compose to use latest tag

--- a/docs/assets/docker-compose.yml
+++ b/docs/assets/docker-compose.yml
@@ -6,7 +6,7 @@ networks:
 
 services:
   koko:
-    image: "kong/koko:dev-latest"
+    image: "kong/koko:latest"
     command: "serve"
     environment:
       KOKO_DATABASE_SQLITE_IN_MEMORY: true
