tests: add MySQL to the test suite in CI

--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -26,10 +26,9 @@ jobs:
           ~/.cache/go-build
         key: ${{ runner.os }}-go-unit-${{ hashFiles('**/go.sum') }}
     - name: setup-db
-      if: ${{ matrix.database == 'postgres'}}
       run: |
-        ./scripts/setup-db.sh &
-        ./scripts/wait-for-db.sh
+        ./scripts/setup-db.sh ${{ matrix.database }} &
+        ./scripts/wait-for-db.sh ${{ matrix.database }}
     - name: make test-race
       run: make test-race
 
