--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -20,6 +20,12 @@ jobs:
           ~/.cache/go-build
           ~/.cache/buf
         key: ${{ runner.os }}-go-lint-${{ hashFiles('**/go.sum') }}
+    - name: Cache go-atc-router library
+      uses: actions/cache@v3
+      with:
+        path: |
+          /usr/local/lib/libatc_router*
+        key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
     - name: make install-tools
       run: make install-tools
     - name: make verify
