--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -35,11 +35,16 @@ jobs:
           ~/.cache/go-build
         key: ${{ runner.os }}-go-integration-${{ hashFiles('**/go.sum') }}
     - name: Cache go-atc-router library
+      id: cache-atc
       uses: actions/cache@v3
       with:
         path: |
-          /usr/local/lib/libatc_router*
+          /tmp/libatc_router*
         key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
+    - name: Install cached library
+      if: steps.cache-atc.outputs.cache-hit == 'true'
+      run: |
+        sudo install /tmp/libatc_router* /usr/local/lib
     - name: make test-integration
       continue-on-error: ${{ matrix.experimental }}
       run: make test-integration
