--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -32,11 +32,16 @@ jobs:
         ./scripts/setup-db.sh ${{ matrix.database }} &
         ./scripts/wait-for-db.sh ${{ matrix.database }}
     - name: Cache go-atc-router library
+      id: cache-atc
       uses: actions/cache@v3
       with:
         path: |
-          /usr/local/lib/libatc_router*
+          /tmp/libatc_router*
         key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
+    - name: Install cached library
+      if: steps.cache-atc.outputs.cache-hit == 'true'
+      run: |
+        sudo install /tmp/libatc_router* /usr/local/lib
     - name: make test-race
       run: make test-race
 
