--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -28,9 +28,12 @@ jobs:
           /tmp/libatc_router*
         key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
     - name: Install cached library
-      if: steps.cache-atc.outputs.cache-hit == 'true'
       run: |
-        sudo install /tmp/libatc_router* /usr/local/lib
+        if [ -e /tmp/libatc_router* ]; then
+          sudo install /tmp/libatc_router* /usr/local/lib;
+        else
+          make install-deps
+        fi
     - name: make install-tools
       run: make install-tools
     - name: make verify
