--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -22,6 +22,7 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: '^1.19'
+        check-latest: true
     - name: Checkout repository
       uses: actions/checkout@v3
     - name: Cache Go modules
