--- a/.github/workflows/label-check.yaml
+++ b/.github/workflows/label-check.yaml
@@ -1,4 +1,4 @@
-name: "PR label check"
+name: Pull Request Label Checker
 on:
   pull_request:
     types: [synchronize, opened, reopened, labeled, unlabeled]
