update default config

--- a/internal/config/testdata/good-0.yaml
+++ b/internal/config/testdata/good-0.yaml
@@ -20,6 +20,8 @@ database:
       ca_bundle_path: "/tmp/foo.crt"
     read_replica:
       hostname: "read-localhost"
+metrics:
+  enabled: true
 control_server:
   tls_cert_path: foo.crt
   tls_key_path: bar.key
