--- a/koko.yaml
+++ b/koko.yaml
@@ -67,5 +67,5 @@ control_server:
   tls_cert_path: cluster.crt
   tls_key_path: cluster.key
 metrics:
-  enabled: true
+  enabled: false
 disable_anonymous_reports: false
