--- a/internal/config/testdata/good-0.yaml
+++ b/internal/config/testdata/good-0.yaml
@@ -22,8 +22,8 @@ database:
       hostname: "read-localhost"
 metrics:
   client_type: "noop"
-prometheus_metrics:
-  enabled: false
+  prometheus:
+    enabled: false
 control_server:
   tls_cert_path: foo.crt
   tls_key_path: bar.key
