feat: implement new 'internal/metrics/v2' package
'internal/metrics' package provides some abstraction over metrics but it
doesn't provide enough control or abstraction. Specifically:
- no support for subsystem in naming (unless enforced manually
- no support for buckets in histograms

This metrics v2 integration deprecates the existing v1 integration in
`internal/metrics` and replaces it with a new integration, based on the
Prometheus Golang client.

The new metrics v2 integration implements a shim on top of Prometheus,
so that it's possible in the future, it can eventually be replaced with
OpenTelemetry's Golang library whenever its metrics implementation
becomes stable.

This change also deprecates the `metrics.client_type` configuration
field, as the Prometheus v2 integration will become the only metrics
integration.

More commits will follow up with this PR, such as updating the existing
metrics to also emit metrics using the new metrics v2 provider, and
then fully removing the legacy metrics v1 integration.

From kong/koko#364

--- a/internal/config/testdata/good-0.yaml
+++ b/internal/config/testdata/good-0.yaml
@@ -20,6 +20,10 @@ database:
       ca_bundle_path: "/tmp/foo.crt"
     read_replica:
       hostname: "read-localhost"
+metrics:
+  client_type: "noop"
+  prometheus:
+    enable: false
 control_server:
   tls_cert_path: foo.crt
   tls_key_path: bar.key
