--- a/koko.yaml
+++ b/koko.yaml
@@ -66,4 +66,7 @@ database:
 control_server:
   tls_cert_path: cluster.crt
   tls_key_path: cluster.key
+metrics:
+  prometheus:
+    enable: false
 disable_anonymous_reports: false
