--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,7 +2,7 @@ name: Integration Tests [OSS]
 on: pull_request
 jobs:
   integration:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -39,15 +39,8 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          /tmp/libatc_router*
+          /tmp/lib
         key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
-    - name: Install cached library
-      run: |
-        if [ -e /tmp/libatc_router* ]; then
-          sudo install /tmp/libatc_router* /usr/local/lib;
-        else
-          make install-deps
-        fi
     - name: make test-integration
       continue-on-error: ${{ matrix.experimental }}
       run: make test-integration
