--- a/.github/workflows/lint.yaml
+++ b/.github/workflows/lint.yaml
@@ -2,7 +2,7 @@ name: Lint [OSS]
 on: pull_request
 jobs:
   lint:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     steps:
     - name: Setup go
       uses: actions/setup-go@v3
@@ -25,15 +25,8 @@ jobs:
       uses: actions/cache@v3
       with:
         path: |
-          /tmp/libatc_router*
+          /tmp/lib
         key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
-    - name: Install cached library
-      run: |
-        if [ -e /tmp/libatc_router* ]; then
-          sudo install /tmp/libatc_router* /usr/local/lib;
-        else
-          make install-deps
-        fi
     - name: make install-tools
       run: make install-tools
     - name: make verify
