--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -13,6 +13,7 @@ jobs:
         - 'kong:2.7.0'
         - 'kong:2.8.0'
         - 'kong:3.0.0'
+        - 'kong:3.1.0'
         include:
           - kong_image: 'kong/kong:master-alpine' # tracks mainline branch of kong/kong
             experimental: false
