--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,7 +2,7 @@ name: Integration Tests [OSS]
 on: pull_request
 jobs:
   integration:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -34,6 +34,13 @@ jobs:
           ~/go/pkg/mod
           ~/.cache/go-build
         key: ${{ runner.os }}-go-integration-${{ hashFiles('**/go.sum') }}
+    - name: Cache go-atc-router library
+      id: cache-atc
+      uses: actions/cache@v3
+      with:
+        path: |
+          /tmp/lib
+        key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
     - name: make test-integration
       continue-on-error: ${{ matrix.experimental }}
       run: make test-integration
