--- a/.github/workflows/unit.yaml
+++ b/.github/workflows/unit.yaml
@@ -2,7 +2,7 @@ name: Unit Tests [OSS]
 on: pull_request
 jobs:
   unit-test:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-22.04
     strategy:
       fail-fast: false
       matrix:
@@ -27,6 +27,13 @@ jobs:
           ~/go/pkg/mod
           ~/.cache/go-build
         key: ${{ runner.os }}-go-unit-${{ hashFiles('**/go.sum') }}
+    - name: Cache go-atc-router library
+      id: cache-atc
+      uses: actions/cache@v3
+      with:
+        path: |
+          /tmp/lib
+        key: ${{ runner.os }}-go-atc-router-${{ hashFiles('**/go.sum') }}
     - name: setup-db
       run: |
         ./scripts/setup-db.sh ${{ matrix.database }} &
